tidy up io params

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,5 +1,7 @@
 params.inputFile = null
-params.outdir = "output"
+params.outputFile = null
+
+params.outdir = 'output'
 
 process {
     container = 'quay.io/nextflow/bash'
